<resources>
    <string name="app_name">FilmsApp</string>
    <string name="open_movie_list">Open movie list</string>
    <string name="open_genres_list">Open genres list</string>
    <string name="movie_click_toast">Click on a movie to find out more</string>
    <string name="search_movie">search movie</string>
    <string name="search">Search</string>
    <string name="production_countries">Production countries</string>
    <string name="original_language">Original Language</string>
    <string name="original_title">Original title</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <plurals name="votes">
        <item quantity="one">vote</item>
        <item quantity="other">votes</item>
    </plurals>
    <string name="find">Find</string>
    <string name="filter">Filter</string>
    <string name="genre">Genre</string>
    <string name="vote_average_range">Vote Average Range</string>
    <string name="zero">0</string>
    <string name="ten">10</string>
    <string name="empty_movie_list">Movie list is empty</string>
    <string name="movie_not_found">The movie was not found</string>
    <string name="clear_search">"Clear search"</string>
    <string name="error_invalid_movie_id">Could not open movie: invalid ID</string>
</resources>