<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tolopea">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tolopea"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bottom_rounded"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/filter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filter"
                    android:textColor="@color/gold"
                    android:textSize="26sp"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:background="@color/tolopea"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/genre"
                    android:textColor="@color/gold"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/genres"
                    app:layout_constraintBottom_toBottomOf="@id/genres" />

                <Spinner
                    android:id="@+id/genres"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/gold"
                    android:gravity="center"
                    android:popupBackground="@color/gold"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/genre"
                    app:layout_constraintTop_toBottomOf="@id/filter" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/sliderContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/rounded_button"
                    android:padding="5dp"
                    app:layout_constraintBottom_toTopOf="@id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/genres">

                    <TextView
                        android:id="@+id/voteAverageRange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vote_average_range"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@id/sliderContainer"
                        app:layout_constraintStart_toStartOf="@id/sliderContainer"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/startValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/zero"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/slider"
                        app:layout_constraintStart_toStartOf="@id/slider"
                        app:layout_constraintTop_toBottomOf="@id/voteAverageRange" />

                    <TextView
                        android:id="@+id/endValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/ten"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/slider"
                        app:layout_constraintEnd_toEndOf="@id/slider"
                        app:layout_constraintTop_toBottomOf="@id/voteAverageRange" />

                    <com.google.android.material.slider.RangeSlider
                        android:id="@+id/slider"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:valueFrom="0"
                        android:valueTo="10"
                        app:haloRadius="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/endValue"
                        app:thumbColor="@color/tolopea"
                        app:thumbElevation="20dp"
                        app:thumbRadius="12dp"
                        app:trackColorActive="@color/wineBerry2"
                        app:trackColorInactive="@color/white"
                        app:trackHeight="4dp"
                        app:values="@array/slider_values" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/rounded_button"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="10dp"
                    android:text="@string/search"
                    android:textColor="@color/wineBerry2"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sliderContainer" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filmRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:padding="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintVertical_bias="0" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>